--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@polymer/polymer": "3.1.0",
     "@webcomponents/webcomponentsjs": "^2.1.3",
+    "moment": "^2.24.0",
     "rise-common-component": "git://github.com/Rise-Vision/rise-common-component.git#v1.2.1"
   },
   "devDependencies": {
