--- a/package.json
+++ b/package.json
@@ -28,21 +28,11 @@
   },
   "homepage": "https://github.com/Rise-Vision/rise-data-counter/#readme",
   "dependencies": {
-    "@polymer/polymer": "3.1.0",
-    "@webcomponents/webcomponentsjs": "^2.1.3",
     "moment": "^2.24.0",
     "rise-common-component": "git://github.com/Rise-Vision/rise-common-component.git#v1.5.2"
   },
   "devDependencies": {
-    "@polymer/test-fixture": "^4.0.2",
-    "chai": "^4.2.0",
-    "coveralls": "3.0.6",
-    "eslint": "^5.16.0",
-    "eslint-utils": ">=1.4.1",
-    "mocha": "^5.2.0",
-    "sinon": "^7.3.2",
-    "wct-istanbul": "^0.14.3",
-    "wct-mocha": "^1.0.0"
+    "eslint-utils": ">=1.4.1"
   },
   "resolutions": {
     "handlebars": "^4.4.5"
